Clean up implement of TryPolicyService